; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_input.c_input_SetPosition.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_input.c_input_SetPosition.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { float, i32 }

@INPUT_CONTROL_SET_POSITION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @input_SetPosition(i32* %0, float %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca float, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_5__, align 4
  store i32* %0, i32** %4, align 8
  store float %1, float* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load float, float* %5, align 4
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  store float %8, float* %10, align 4
  %11 = load i32, i32* %6, align 4
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 4
  %14 = load i32*, i32** %4, align 8
  %15 = load i32, i32* @INPUT_CONTROL_SET_POSITION, align 4
  %16 = call i32 @input_ControlPush(i32* %14, i32 %15, %struct.TYPE_5__* %7)
  ret void
}

declare dso_local i32 @input_ControlPush(i32*, i32, %struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
